# dreamcast-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: github-actions.yml
cmake/: GenerateCdiImage.cmake
src/my_module/: CMakeLists.txt  game_utils.cpp  main.cpp
src/my_module/include/my_module/: game_utils.h
tests/: CMakeLists.txt  test_main.cpp  test_my_module.cpp
toolchains/: dreamcast.cmake
